stage0/src/include/lean/lean.h

typedef lean_object * lean_obj_res;   /* Standard object result. */
/* Float */

LEAN_EXPORT lean_obj_res lean_float_to_string(double a);
LEAN_EXPORT uint8_t lean_float_isnan(double a);
LEAN_EXPORT uint8_t lean_float_isfinite(double a);
LEAN_EXPORT uint8_t lean_float_isinf(double a);
LEAN_EXPORT lean_obj_res lean_float_frexp(double a);
/* float primitives */

// Here is how casting a float to an integral type works according to the standard:
// * Separate the float into integral parts and fractional parts. The fractional part
//   has the same sign as the float, so the integral part is the result of rounding the
//   float towards zero.
// * If the integral part fits into the target type, that is the result of the cast.
// * Otherwise, the result is undefined behavior.
static inline uint8_t lean_float_to_uint8(double a) {
    return 0. <= a ? (a < 256. ? (uint8_t)a : UINT8_MAX) : 0;
}
static inline uint16_t lean_float_to_uint16(double a) {
    return 0. <= a ? (a < 65536. ? (uint16_t)a : UINT16_MAX) : 0;
}
static inline uint32_t lean_float_to_uint32(double a) {
    return 0. <= a ? (a < 4294967296. ? (uint32_t)a : UINT32_MAX) : 0;
}
static inline uint64_t lean_float_to_uint64(double a) {
    return 0. <= a ? (a < 18446744073709551616. ? (uint64_t)a : UINT64_MAX) : 0;
}
static inline size_t lean_float_to_usize(double a) {
    if (sizeof(size_t) == sizeof(uint64_t)) // NOLINT
        return (size_t) lean_float_to_uint64(a); // NOLINT
    else
        return (size_t) lean_float_to_uint32(a); // NOLINT
}
LEAN_EXPORT double lean_float_of_bits(uint64_t u);
LEAN_EXPORT uint64_t lean_float_to_bits(double d);
static inline double lean_float_add(double a, double b) { return a + b; }
static inline double lean_float_sub(double a, double b) { return a - b; }
static inline double lean_float_mul(double a, double b) { return a * b; }
static inline double lean_float_div(double a, double b) { return a / b; }
static inline double lean_float_negate(double a) { return -a; }
static inline uint8_t lean_float_beq(double a, double b) { return a == b; }
static inline uint8_t lean_float_decLe(double a, double b) { return a <= b; }
static inline uint8_t lean_float_decLt(double a, double b) { return a < b; }
static inline double lean_uint8_to_float(uint8_t a) { return (double) a; }
static inline double lean_uint16_to_float(uint16_t a) { return (double) a; }
static inline double lean_uint32_to_float(uint32_t a) { return (double) a; }
static inline double lean_uint64_to_float(uint64_t a) { return (double) a; }
typedef struct {
    _Atomic(int) state;
    _Atomic(int) lock;
} lean_once_cell_t;
LEAN_EXPORT float lean_float32_once_cold(float* loc, lean_once_cell_t* tok, float (*init)(void));
static inline float lean_float32_once(float* loc, lean_once_cell_t* tok, float (*init)(void)) {
    if (LEAN_LIKELY(tok->state == 1)) {
        return *loc;
    }
    return lean_float32_once_cold(loc, tok, init);
}
LEAN_EXPORT double lean_float_once_cold(double* loc, lean_once_cell_t* tok, double (*init)(void));
static inline double lean_float_once(double* loc, lean_once_cell_t* tok, double (*init)(void)) {
    if (LEAN_LIKELY(tok->state == 1)) {
        return *loc;
    }
    return lean_float_once_cold(loc, tok, init);
}